temporary fix for graphs
stacked all graphs vertically so they are now not overlapping and are available on mobile

--- a/styles.css
+++ b/styles.css
@@ -84,9 +84,6 @@ form {
 
 /* edit so that when we are on mobile, the graphs do not show */
 @media (max-width: 580px) {
-    .graph {
-      display: none;
-    }
 
     .graph-warning {
         display: contents;
